...
                ToolbarItem(placement: .cancellationAction) {
                    Button("Skip") {
                        onSave(nil)
                    }
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        let patronNpubs = scopeAllPatrons ? nil : Array(selectedPatronNpubs)
                        onSave(patronNpubs)
                    }
                }
            }
        }
...
